# llms-engineering-main

./: .gitignore  Auxiliar-Notebook.ipynb  Project1-week1.ipynb  Project2-week2.ipynb  Project3-week3.ipynb  Project5-week5.ipynb  README.md  planProject3Week3.prompt.md  pyproject.toml  week1-Project1.ipynb  week2-Project2.ipynb
.github/: copilot-instructions.md
docs/: EXTRACTED_MODULES.md
examples/: private_rag_chatbot_smoke.py  synthetic_data_studio_smoke.py
src/llm_portfolio/: __init__.py
src/llm_portfolio/private_rag_chatbot/: __init__.py  config.py  workflow.py
src/llm_portfolio/synthetic_data_studio/: __init__.py  parsing.py  prompting.py  schemas.py  validation.py  workflow.py
tests/: test_private_rag_chatbot.py  test_synthetic_data_studio.py
vector_db/: chroma.sqlite3
week1/: day1.ipynb  day2.ipynb  day5.ipynb
week2/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb
week3/: day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb
week4/: day3.ipynb  day4.ipynb  optimized  optimized.cpp
week5/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day4_5.ipynb  day5.ipynb
week5/vector_db/: chroma.sqlite3
week6/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  human_output.csv  items.py  test.pkl
