[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-engineering-portfolio"
version = "0.1.0"
description = "Reusable portfolio code extracted from applied LLM engineering case studies"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Oscar G. Bocanegra" }
]
dependencies = [
  "pandas>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
